--- a/css/theme/_newsapps.scss
+++ b/css/theme/_newsapps.scss
@@ -1,9 +1,32 @@
 .newsapps {
-  @include list-grid($large, 12, 3);
-  @include list-grid($medium, 12, 2);
 
   ul {
     @include pad(0);
+  }
+
+  li {
+    text-align: left;
+
+    h3 {
+      margin-bottom: 0;
+    }
+
+    img {
+      margin: 0 auto;
+      max-width: 410px;
+    }
+
+    a {
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: $orange;
+      }
+    }
+  }
+
+  .dateline {
+    font-size: .8em;
   }
 
   img {
