--- a/css/main.css
+++ b/css/main.css
@@ -538,44 +538,21 @@ footer {
   .social li {
     margin-bottom: 1em; }
 
-.newsapps li {
-  float: left;
-  display: block;
-  margin-right: 2.35765%;
-  width: 100%; }
-  .newsapps li:last-child {
-    margin-right: 0; }
-  @media screen and (min-width: 1000px) {
-    .newsapps li {
-      padding: 0;
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 31.76157%; }
-      .newsapps li:nth-child(3n) {
-        margin-right: 0; }
-      .newsapps li:last-child {
-        margin-right: 0; } }
-.newsapps li {
-  float: left;
-  display: block;
-  margin-right: 2.35765%;
-  width: 100%; }
-  .newsapps li:last-child {
-    margin-right: 0; }
-  @media screen and (min-width: 640px) and (max-width: 999px) {
-    .newsapps li {
-      padding: 0;
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 48.82117%; }
-      .newsapps li:nth-child(2n) {
-        margin-right: 0; }
-      .newsapps li:last-child {
-        margin-right: 0; } }
 .newsapps ul {
   padding: 0; }
+.newsapps li {
+  text-align: left; }
+  .newsapps li h3 {
+    margin-bottom: 0; }
+  .newsapps li img {
+    margin: 0 auto;
+    max-width: 410px; }
+  .newsapps li a {
+    text-decoration: none; }
+    .newsapps li a:hover {
+      text-decoration: #fd795b; }
+.newsapps .dateline {
+  font-size: .8em; }
 .newsapps img {
   width: 100%; }
 
