--- a/main.css
+++ b/main.css
@@ -378,7 +378,7 @@ th {
   width: 100%; }
   .main-grid:last-child {
     margin-right: 0; }
-  @media screen and (min-width: 640px) {
+  @media screen and (min-width: 1000px) {
     .main-grid {
       float: left;
       display: block;
@@ -414,10 +414,16 @@ hr {
   margin: 1.5em 0; }
 
 img {
+  margin-top: 1em;
+  max-width: 27em;
   width: 100%; }
 
 h2 {
   margin: 0 0 1em; }
+
+.landing img {
+  margin-top: 1em;
+  max-width: 27em; }
 
 .site-header {
   background: #bdcfbd; }
@@ -452,7 +458,7 @@ nav {
     width: 100%; }
     nav li:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 640px) {
+    @media screen and (min-width: 1000px) {
       nav li {
         padding: 0;
         float: left;
@@ -460,6 +466,24 @@ nav {
         margin-right: 2.35765%;
         width: 23.23176%; }
         nav li:nth-child(4n) {
+          margin-right: 0; }
+        nav li:last-child {
+          margin-right: 0; } }
+  nav li {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    nav li:last-child {
+      margin-right: 0; }
+    @media screen and (min-width: 1000px) {
+      nav li {
+        padding: 0;
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 48.82117%; }
+        nav li:nth-child(2n) {
           margin-right: 0; }
         nav li:last-child {
           margin-right: 0; } }
@@ -498,7 +522,7 @@ footer {
     width: 100%; }
     .social li:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 640px) {
+    @media screen and (min-width: 1000px) {
       .social li {
         padding: 0;
         float: left;
@@ -514,30 +538,25 @@ footer {
   .social li {
     margin-bottom: 1em; }
 
-.newsapps li {
-  float: left;
-  display: block;
-  margin-right: 2.35765%;
-  width: 100%; }
-  .newsapps li:last-child {
-    margin-right: 0; }
-  @media screen and (min-width: 640px) {
-    .newsapps li {
-      padding: 0;
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 31.76157%; }
-      .newsapps li:nth-child(3n) {
-        margin-right: 0; }
-      .newsapps li:last-child {
-        margin-right: 0; } }
 .newsapps ul {
   padding: 0; }
+.newsapps li {
+  text-align: left; }
+  .newsapps li h3 {
+    margin-bottom: 0; }
+  .newsapps li img {
+    margin: 0 auto;
+    max-width: 410px; }
+  .newsapps li a {
+    text-decoration: none; }
+    .newsapps li a:hover {
+      text-decoration: #fd795b; }
+.newsapps .dateline {
+  font-size: .8em; }
 .newsapps img {
   width: 100%; }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 640px) and (max-width: 999px) {
   .about-me .intro {
     float: left;
     display: block;
@@ -548,7 +567,7 @@ footer {
       margin-right: 0; } }
 .about-me .intro-image {
   margin: 0 1em 1em 0; }
-  @media screen and (min-width: 400px) {
+  @media screen and (min-width: 640px) and (max-width: 999px) {
     .about-me .intro-image {
       float: left;
       display: block;
