--- a/css/theme/_newsapps.scss
+++ b/css/theme/_newsapps.scss
@@ -1,18 +1,40 @@
 .newsapps {
   ul {
     @include pad(0);
+    list-style: none;
   }
 
   li {
+    border-bottom: 1px solid $orange;
     text-align: left;
+    padding-bottom: 1em;
+
+    &:after {
+      clear: both;
+      content: '';
+      display: block;
+      font-size: 0;
+      height: 0;
+      visibility: hidden;
+   }
 
     h3 {
       margin-bottom: 0;
     }
 
+    h3,
+    p {
+      padding-right: 1em;
+    }
+
+    .dateline {
+      font-size: .8em;
+    }
+
     img {
+      float: right;
       margin: 0 auto;
-      max-width: 410px;
+      max-width: 40%;
     }
 
     a {
