--- a/css/theme/_newsapps.scss
+++ b/css/theme/_newsapps.scss
@@ -5,7 +5,7 @@
   }
 
   li {
-    border-bottom: 1px solid $orange;
+    border-bottom: 1px solid $dk-teal;
     text-align: left;
     padding-bottom: 1em;
 
@@ -22,18 +22,13 @@
       margin-bottom: 0;
     }
 
-    h3,
-    p {
-      padding-right: 1em;
-    }
-
     .dateline {
       font-size: .8em;
     }
 
     img {
       float: right;
-      margin: 0 auto;
+      margin: 0 0 .5em 1em;
       max-width: 40%;
     }
 
