--- a/main.css
+++ b/main.css
@@ -533,7 +533,7 @@ footer {
   padding: 0;
   list-style: none; }
 .newsapps li {
-  border-bottom: 1px solid #fd795b;
+  border-bottom: 1px solid #bdcfbd;
   text-align: left;
   padding-bottom: 1em; }
   .newsapps li:after {
@@ -545,14 +545,11 @@ footer {
     visibility: hidden; }
   .newsapps li h3 {
     margin-bottom: 0; }
-  .newsapps li h3,
-  .newsapps li p {
-    padding-right: 1em; }
   .newsapps li .dateline {
     font-size: .8em; }
   .newsapps li img {
     float: right;
-    margin: 0 auto;
+    margin: 0 0 .5em 1em;
     max-width: 40%; }
   .newsapps li a {
     text-decoration: none; }
